--- a/packages/app/src/modules/declaration-remuneration/recapitulatif/IndicatorTables.module.scss
+++ b/packages/app/src/modules/declaration-remuneration/recapitulatif/IndicatorTables.module.scss
@@ -1,6 +1,7 @@
 .section {
 	display: flex;
 	flex-direction: column;
+	gap: 1.5rem;
 }
 
 .numeric {
@@ -41,15 +42,13 @@
 }
 
 .subTable {
-	margin-top: 1rem;
-
-	&:first-child {
-		margin-top: 0;
-	}
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
 }
 
 .subTitle {
-	margin-top: 1rem;
+	margin: 0;
 }
 
 .emptyNotice {
