--- a/packages/app/src/modules/declaration-remuneration/recapitulatif/RecapitulatifPage.module.scss
+++ b/packages/app/src/modules/declaration-remuneration/recapitulatif/RecapitulatifPage.module.scss
@@ -51,7 +51,7 @@
 .indicatorsSection {
 	display: flex;
 	flex-direction: column;
-	gap: 1.5rem;
+	gap: 2.5rem;
 }
 
 .sourceLine {
